# safe-vote

./: .gitignore  README.md
vote_server/: .dockerignore  .gitignore  .helmignore  API test.http  Cargo.toml  Chart.yaml  Dockerfile  README.md  Rocket.toml  completions.sh  values.yaml
vote_server/migrations/2022-09-09-060553_create_polls/: down.sql  up.sql
vote_server/migrations/2024-08-09-154258_add_timestamps/: down.sql  up.sql
vote_server/src/: main.rs  models.rs
vote_server/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  packages-registry-secret.yaml  service.yaml  serviceaccount.yaml
vote_server/templates/tests/: test-connection.yaml
