[package]
name = "vote_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
tokio = { version = "1.20.0", features = ["macros"] }
serde = { version = "1.0.139", features = ["derive"] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["deadpool_postgres"] }
default.databases.vote_server.url = "postgres"
